--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -81,4 +81,5 @@
     "files.trimTrailingWhitespace": true,
     "files.insertFinalNewline": true,
     "files.trimFinalNewlines": true,
+    "python.linting.mypyPath": "/home/t-kbouzid/miniconda3/envs/himl/bin/mypy",
 }
