--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -91,6 +91,24 @@
             "console": "integratedTerminal",
         },
         {
+            "name": "Python: Run TilesPandaImageNetMIL locally",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/hi-ml/src/health_ml/runner.py",
+            "cwd": "${workspaceFolder}/hi-ml-histopathology",
+            "args": [
+                "--model=histopathology.TilesPandaImageNetMIL",
+                "--max_bag_size=4",
+                "--max_bag_size_inf=4",
+                "--max_epochs=2",
+                "--pl_limit_train_batches=2",
+                "--pl_limit_val_batches=2",
+                "--pl_limit_test_batches=2",
+                "--crossval_count=1"
+            ],
+            "console": "integratedTerminal",
+        },
+        {
             "name": "Python: Run SlidesPandaImageNetMIL locally",
             "type": "python",
             "request": "launch",
@@ -102,7 +120,8 @@
                 "--pl_limit_train_batches=2",
                 "--pl_limit_val_batches=2",
                 "--pl_limit_test_batches=2",
-                "--crossval_count=1"
+                "--crossval_count=1",
+                "--batch_size=2"
             ],
             "console": "integratedTerminal",
         },
