--- a/hi-ml-histopathology/environment.yml
+++ b/hi-ml-histopathology/environment.yml
@@ -1,4 +1,4 @@
-name: HimlHisto
+name: HimlHisto_pl_1.5.1
 channels:
   - defaults
   - pytorch
@@ -17,7 +17,7 @@ dependencies:
       - matplotlib==3.4.3
       - opencv-python-headless==4.5.1.48
       - pandas==1.3.4
-      - pytorch-lightning==1.5.5
+      - pytorch-lightning==1.5.1
       - rpdb==0.1.6
       - setuptools==59.5.0
       # Run requirements for hi-ml-azure
